--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "food-recipe",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.4.1",
+    "node": "8.12.0"
+  },
   "dependencies": {
     "@devexpress/dx-react-core": "^1.10.0",
     "@devexpress/dx-react-grid": "^1.10.0",
